--- a/react-mors/src/App.css
+++ b/react-mors/src/App.css
@@ -7,11 +7,23 @@
   grid-template-columns: auto 1fr;
   grid-gap: 36px;
   padding-top: 80px;
+ 
 }
 .home{
   display: grid;
   grid-template-columns: auto 1fr;
   grid-gap: 80px;
+}
+
+#root{
+background: #f2f4f7;
+}
+.infoBlock .infoBlock__price{
+background: #FFFFFF;
+    box-shadow: 0px 5px 18px rgb(0 0 0 / 12%);
+    border-radius: 3px;
+    padding: 24px 48px 48px 48px;
+    margin: 0 0 12px 0;
 }
 
 *{
@@ -87,6 +99,12 @@
   min-width: 250px;
   display: grid;
       align-content: baseline;
+}
+.servicePage{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  justify-items: end;
+   
 }
 .navigation__item {
   padding: 16px 0;
